# Hu-Honours-back

./: Cargo.toml  README.md
.sqlx/: query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json
src/: auth_middleware.rs  handlers.rs  main.rs  models.rs
