[package]
name = "honours_backend_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.15"
sqlx = { version = "=0.7.4", features = ["runtime-tokio", "postgres", "macros"] }
jsonwebtoken = "9.3"
chrono = "0.4"
dotenvy = "0.15"
